# Boardgame_Shop

./: .gitignore  README.MD  manage.py  pyproject.toml  pytest.ini
BoardgameShop/: asgi.py  settings.py  urls.py  wsgi.py
accounts/: conftest.py  forms.py  models.py  tests.py  urls.py  validattors.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_customuser_address.py  0003_alter_customuser_phone_number.py
shop/: admin.py  conftest.py  models.py  tests.py  urls.py  views.py
shop/migrations/: 0001_initial.py  0002_alter_boardgame_max_game_time.py  0003_alter_boardgame_options.py  0004_cart_cartboardgame_cart_boardgames.py  0005_order_orderboardgame_order_boardgame.py
static/css/: styles.css
templates/: landing_page.html  top_header.html
templates/accounts/: form.html  register.html
templates/shop/: boardgame_confirm_delete.html  boardgame_details.html  boardgames_list.html  cart_list.html  form.html  forms.py  order_detail.html  order_list.html  review_confirm_delete.html  review_detail.html  reviews_list.html  user_profile.html
