[tool.poetry]
name = "boardgame-shop"
version = "1.8.0"
description = ""
authors = ["Adam Wiercioch <adamwiercioch95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
django-crispy-forms = "^2.1"
crispy-bootstrap5 = "^2024.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
